--- a/src/index.html
+++ b/src/index.html
@@ -62,16 +62,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="header__middle" data-aos="zoom-in">
-                    <h1 class="header__title">Доставляем товары</br><span> из&nbsp;Европы и США для байеров</span></h1>
-                    <span class="header__subtitle">Сами отправляем по адресам ваших клиентов</span>
-                    <div class="header__wrapper-btn">
+                <div class="header__middle" >
+                    <h1 class="header__title" data-aos="zoom-in">Доставляем товары</br><span> из&nbsp;Европы и США для байеров</span></h1>
+                    <span class="header__subtitle" data-aos="zoom-in">Сами отправляем по адресам ваших клиентов</span>
+                    <div class="header__wrapper-btn" data-aos="zoom-in">
                         <button class="btn header__btn" data-scroll='calc'>рассчитать стоимость
                             <img src="./assets/img/png/Layer 131 copy 2@1X.png" alt="img" class="header__btn-img">
                         </button>
                         <button class="btn btn-transparent" data-scroll='price'>просмотреть прайс-лист</button>
                     </div>
-                    <ul class="header__list">
+                    <ul class="header__list" data-aos="zoom-in">
                         <li class="header__item">Стоимость 5 $/кг, доставим от Вильнюса до Москвы за 3-5 дней</li>
                         <li class="header__item">Собственный склад консолидации в Вильнюсе</li>
                         <li class="header__item">Заберем груз от адреса отправителя</li>
@@ -273,45 +273,48 @@
                         <input type="hidden" name="utm_content" value="" />
                     </form>
                 </div>
-                <div class="thanks__inner">
-                    <p class="thanks__title title">Прайс-лист
-                        на доставку грузов</p>
-                    <span class="thanks__subtitle">Минимальный заказ – 200$</span>
-                    <div class="thanks__wrapper">
-                        <ul class="thanks__list">
-                            <li class="thanks__item">
-                                Тип груза:
-                                <span class="thanks__cargo"></span>
-                            </li>
-                            <li class="thanks__item">
-                                Вес груза:
-                                <span class="thanks__weight"></span>
-                            </li>
-                            <li class="thanks__item">
-                                Страна отправки:
-                                <span class="thanks__country"></span>
-                            </li>
-                        </ul>
-                        <span class="thanks__cost-title">Стоимость доставки вашего груза:</span>
-                        <span class="thanks__cost"></span>
-                        <span class="thanks__min">Вы можете привезти ещё больше
-                            груза за эти же деньги</span>
-                        <ul class="thanks__items">
-                            <li class="thanks__cell">В стоимость включено:</li>
-                            <li class="thanks__cell">Доставка Вильнюс-Москва</li>
-                            <li class="thanks__cell">Таможенное оформление</li>
-                            <li class="thanks__cell">Финансовая гарантия</li>
-                        </ul>
-                        <p class="thanks__bottom">*Доставка от склада отправителя 
-                            до Вильнюса рассчитывается 
-                            индивидуально в зависимости 
-                            от параметров груза.Наши менеждеры 
-                            свяжутся с вами в рабочее время 
-                            (с 10:00 до 18:00 по МСК) 
-                            для консультации.</p>
+                <div class="thanks">
+                    <div class="btn thanks__back">&larr; На главную</div>
+                    <div class="thanks__inner">
+                        <p class="thanks__title title">Прайс-лист
+                            на доставку грузов</p>
+                        <span class="thanks__subtitle">Минимальный заказ – 200$</span>
+                        <div class="thanks__wrapper">
+                            <ul class="thanks__list">
+                                <li class="thanks__item">
+                                    Тип груза:
+                                    <span class="thanks__cargo"></span>
+                                </li>
+                                <li class="thanks__item">
+                                    Вес груза:
+                                    <span class="thanks__weight"></span>
+                                </li>
+                                <li class="thanks__item">
+                                    Страна отправки:
+                                    <span class="thanks__country"></span>
+                                </li>
+                            </ul>
+                            <span class="thanks__cost-title">Стоимость доставки вашего груза:</span>
+                            <span class="thanks__cost"></span>
+                            <span class="thanks__min">Вы можете привезти ещё больше
+                                груза за эти же деньги</span>
+                            <ul class="thanks__items">
+                                <li class="thanks__cell">В стоимость включено:</li>
+                                <li class="thanks__cell">Доставка Вильнюс-Москва</li>
+                                <li class="thanks__cell">Таможенное оформление</li>
+                                <li class="thanks__cell">Финансовая гарантия</li>
+                            </ul>
+                            <p class="thanks__bottom">*Доставка от склада отправителя 
+                                до Вильнюса рассчитывается 
+                                индивидуально в зависимости 
+                                от параметров груза.Наши менеждеры 
+                                свяжутся с вами в рабочее время 
+                                (с 10:00 до 18:00 по МСК) 
+                                для консультации.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div>                
         </section>
         <section class="example">
             <div class="container">
@@ -532,7 +535,7 @@
                             <li class="contacts__item">Отдел продаж: пн-пт 10:00 – 18:00</li>
                             <li class="contacts__item">mail@mail.ru</li>
                             <li class="contacts__item">
-                                <a href="" class="contacts__link">ссылка на инстаграм карго</a>
+                                <a target="_blank" href='https://www.instagram.com/?hl=ru' class="contacts__link">ссылка на инстаграм карго</a>
                             </li>
                         </ul>
                     </div>
