--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
             <div class="container">
                 <div class="calc__inner" data-aos="zoom-in-up">
                     <h2 class="calc__title title">Рассчитайте точную стоимость доставки груза</h2>
-                    <form class="calc__form" name='calc' id='calc'>              
+                    <form class="calc__form" name='calc' id='calc' action='send.php'>              
                         <div class="calc__top">
                             <div class="calc__row ">
                                 <div class="calc__col">
@@ -256,9 +256,9 @@
                                     <input type="text" class="calc__input form__input" name='instagram'>
                                 </div>
                             </div>
-                            <button class="calc__btn btn" type="submit" value='рассчитать стоимость'>рассчитать стоимость
+                            <input class="calc__btn btn" type="submit" value='рассчитать стоимость'>
                                 <img src="./assets/img/png/Layer 131 copy 2@1X.png" alt="img" class="header__btn-img">
-                            </button>
+                            </input>
                             <p class="calc__text">
                                 После нажатия на кнопку вы будете
                                 перенаправлены на страницу расчета
