fix text product type

--- a/src/index.html
+++ b/src/index.html
@@ -202,13 +202,12 @@
                                         <option value="Сумки">Сумки</option>
                                         <option value="Ремни">Ремни</option>
                                         <option value="Чемоданы">Чемоданы</option>
-                                        <option value="Дорожные	сумки">Дорожные сумки</option>
+                                        <option value="Дорожные сумки">Дорожные сумки</option>
                                         <option value="БАДы">БАДы</option>
-                                        <option value="Рыболовные	снасти">Рыболовные снасти</option>
+                                        <option value="Рыболовные снасти">Рыболовные снасти</option>
                                         <option value="Запчасти">Запчасти</option>
                                         <option value="Косметика">Косметика</option>
-                                        <option value="
-                                        Домашний текстиль">
+                                        <option value="Домашний текстиль">
                                             Домашний текстиль</option>
                                     </select>
                                 </div>
