add validation phone number

--- a/src/index.html
+++ b/src/index.html
@@ -250,14 +250,15 @@
                                 </div>
                                 <div class="calc__col">
                                     <label class="calc__label form__label"> 6. Ваш аккаунт Instagram:
-                                    </label>
-    
+                                    </label>    
                                     <input type="text" class="calc__input form__input" name='instagram'>
                                 </div>
                             </div>
-                            <input class="calc__btn btn" type="submit" value='рассчитать стоимость'>
+                            <div class="calc__submit">
+                                <input class="calc__btn btn" type="submit" value='рассчитать стоимость'>
                                 <img src="./assets/img/png/Layer 131 copy 2@1X.png" alt="img" class="header__btn-img">
-                            </input>
+                            </div>                           
+                           
                             <p class="calc__text">
                                 После нажатия на кнопку вы будете
                                 перенаправлены на страницу расчета
