--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                         <div class="header__close">&#10006;</div>
                     </div>
                 </div>
-                <div class="header__top" data-aos="fade-down">
+                <div class="header__top">
                     <div class="header__left">
                         <div class="header__wrapper-menu">
                             <div class="header__menu"></div>
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="header__center">
-                        <a target="_blank" href='https://www.instagram.com/?hl=ru' class="header__center-text">Instagram Direct</a>
+                        <a target="_blank" href='https://www.instagram.com/logistics_belcargo/?hl=ru' class="header__center-text">Instagram Direct</a>
                         <img src="./assets/img/jpg/insta_red_logo.jpg" alt="" class="header__center-img">
                     </div>
                     <div class="header__right">
@@ -63,15 +63,15 @@
                     </div>
                 </div>
                 <div class="header__middle" >
-                    <h1 class="header__title" data-aos="zoom-in">Доставляем товары</br><span> из&nbsp;Европы и США для байеров</span></h1>
-                    <span class="header__subtitle" data-aos="zoom-in">Сами отправляем по адресам ваших клиентов</span>
-                    <div class="header__wrapper-btn" data-aos="zoom-in">
+                    <h1 class="header__title">Доставляем товары</br><span> из&nbsp;Европы и США для байеров</span></h1>
+                    <span class="header__subtitle" >Сами отправляем по адресам ваших клиентов</span>
+                    <div class="header__wrapper-btn">
                         <button class="btn header__btn" data-scroll='calc'>рассчитать стоимость
                             <img src="./assets/img/png/Layer 131 copy 2@1X.png" alt="img" class="header__btn-img">
                         </button>
                         <button class="btn btn-transparent" data-scroll='price'>просмотреть прайс-лист</button>
                     </div>
-                    <ul class="header__list" data-aos="zoom-in">
+                    <ul class="header__list" >
                         <li class="header__item">Стоимость 5 $/кг, доставим от Вильнюса до Москвы за 3-5 дней</li>
                         <li class="header__item">Собственный склад консолидации в Вильнюсе</li>
                         <li class="header__item">Заберем груз от адреса отправителя</li>
@@ -79,7 +79,7 @@
                             за сохранность груза</li>
                     </ul>
                 </div>
-                <div class="header__bottom format" data-aos="flip-right" id='format'>
+                <div class="header__bottom format" id='format'>
                     <h2 class="format__title title">2 удобных формата работы с нами:
                     </h2>
                     <div class="format__subtitle">
@@ -142,42 +142,42 @@
                     <h2 class="products__title title">Какие товары мы доставляем:
                     </h2>
                     <ul class="products__list">
-                        <li class="products__item" data-aos="zoom-in">
+                        <li class="products__item" >
                             <img src="./assets/img/png/1icon.png" alt="" class="products__img">
                             <span class="products__desc">
                                 Одежда,
                                 обувь
                             </span>
                         </li>
-                        <li class="products__item" data-aos="zoom-in" data-aos-delay="100">
+                        <li class="products__item">
                             <img src="./assets/img/png/2icon.png" alt="" class="products__img">
                             <span class="products__desc">
                                 Сумки,
                                 чемоданы
                             </span>
                         </li>
-                        <li class="products__item" data-aos="zoom-in" data-aos-delay="200">
+                        <li class="products__item">
                             <img src="./assets/img/png/3icon.png" alt="" class="products__img">
                             <span class="products__desc">
                                 Косметика,
                                 БАДы
                             </span>
                         </li>
-                        <li class="products__item" data-aos="zoom-in" data-aos-delay="300">
+                        <li class="products__item" >
                             <img src="./assets/img/png/4icon.png" alt="" class="products__img">
                             <span class="products__desc">
                                 Домашний
                                 текстиль
                             </span>
                         </li>
-                        <li class="products__item" data-aos="zoom-in" data-aos-delay="400">
+                        <li class="products__item" >
                             <img src="./assets/img/png/5icon.png" alt="" class="products__img">
                             <span class="products__desc">
                                 Запасные
                                 части
                             </span>
                         </li>
-                        <li class="products__item" data-aos="zoom-in" data-aos-delay="500">
+                        <li class="products__item" >
                             <img src="./assets/img/png/6icon.png" alt="" class="products__img">
                             <span class="products__desc">
                                Рыболовные снасти
@@ -189,7 +189,7 @@
         </section>
         <section class="calc" id='calc'>
             <div class="container">
-                <div class="calc__inner" data-aos="zoom-in-up">
+                <div class="calc__inner">
                     <h2 class="calc__title title">Рассчитайте точную стоимость доставки груза</h2>
                     <form class="calc__form" name='calc' id='calc' action='send.php'>              
                         <div class="calc__top">
@@ -322,19 +322,19 @@
                     <h2 class="example__title title">Рассказываем на примере с Италией,
                         как работает наш пакет «Под ключ»</h2>
                     <ul class="example__list">
-                        <li class="example__item" data-aos="flip-down">
+                        <li class="example__item">
                             <img src="./assets/img/jpg/Alice_1.jpg" alt="" class="example__img">
                             <span class="example__desc">Байер Алиса находит клиентов через Instagram и предлагает им
                                 выгодные цены на модную одежду, обувь и аксессуары.
                                 Алиса закупает все товары в Италии с выгодой 25-40%, поэтому у нее много заказов</span>
                         </li>
-                        <li class="example__item" data-aos="flip-down">
+                        <li class="example__item">
                             <img src="./assets/img/jpg/Alice_2.jpg" alt="" class="example__img">
                             <span class="example__desc">У Алисы на этой неделе заказали 3 пары обуви, 2 сумки и пальто.
                                 Алиса понимает, что клиенты не хотят долго ждать, поэтому обращается
                                 в Cargo-byer.ru</span>
                         </li>
-                        <li class="example__item" data-aos="flip-down">
+                        <li class="example__item">
                             <img src="./assets/img/jpg/Alice_3.jpg" alt="" class="example__img">
                             <span class="example__desc">В Cargo-byer Алисе предлагают вариант, который значительно
                                 сэкономит ее время и деньги: компания сама заберет ее скомплектованный заказ в Италии,
@@ -342,7 +342,7 @@
                                 срок доставки и Алиса может точно сказать свои клиентам, когда они получат свой
                                 заказ</span>
                         </li>
-                        <li class="example__item" data-aos="flip-down">
+                        <li class="example__item">
                             <img src="./assets/img/jpg/Alice_4.jpg" alt="" class="example__img">
                             <span class="example__desc">Что нужно сделать Алисе? Ей нужно скомплектовать 1 коробку с
                                 двумя коробками внутри (для каждого клиента). Когда весь заказ Алисы попадает на склад в
@@ -350,14 +350,14 @@
                                 - Коробка 1: для ФИО, клиент сам заберет ее на складе в Москве
                                 - Коробка 2: для ФИО, заказ нужно отправить в Смоленск</span>
                         </li>
-                        <li class="example__item" data-aos="flip-down">
+                        <li class="example__item">
                             <img src="./assets/img/jpg/Alice_5.jpg" alt="" class="example__img">
                             <span class="example__desc">К моменту прибытия заказа Алисы на склад в Москву, сотрудники
                                 уже знают, как распределить каждую коробку и поэтому делают все быстро и без задержек.
                                 Как и просила Алиса, одному клиенту отдают заказ на складе, другому отправляют
                                 транспортной компанией в Смоленск.</span>
                         </li>
-                        <li class="example__item" data-aos="flip-down">
+                        <li class="example__item">
                             <img src="./assets/img/jpg/Alice_6.jpg" alt="" class="example__img">
                             <span class="example__desc">Алиса счастлива – ей не пришлось тратить свое время, чтобы самой
                                 забрать заказ со склада и отправлять клиентам. Это время Алиса потратила на поиск новых
@@ -417,6 +417,7 @@
                                 в Cargo-byer :)</span>
                         </li>
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
@@ -425,21 +426,21 @@
                 <div class="price__inner">
                     <h2 class="price__title title">Посмотрите полный прайс на наши услуги</h2>
                     <ul class="price__list">
-                        <li class="price__item" data-aos="fade-up">
+                        <li class="price__item">
                             <img src="./assets/img/png/7icon.png" alt="" class="price__img">
                             <p class="price__desc">
                                 Минимальный<br />
                                 заказ 200 $
                             </p>
                         </li>
-                        <li class="price__item" data-aos="fade-up" data-aos-delay="100">
+                        <li class="price__item">
                             <img src="./assets/img/png/8icon.png" alt="" class="price__img">
                             <p class="price__desc">
                                 Несем финансовые гарантии
                                 за сохранность груза
                             </p>
                         </li>
-                        <li class="price__item" data-aos="fade-up" data-aos-delay="200">
+                        <li class="price__item">
                             <img src="./assets/img/png/9icon.png" alt="" class="price__img">
                             <p class="price__desc">
                                 Доставка из Вильнюса
@@ -467,7 +468,7 @@
                 <div class="about-us__inner">
                     <h2 class="about-us__title title">Познакомьтесь с нашей компанией
                     </h2>
-                    <div class="about-us__wrapper" data-aos="zoom-in-up">
+                    <div class="about-us__wrapper">
                         <div class="about-us__border">
                             <span class="about-us__left">
                                 CARGO-Buyer
@@ -507,7 +508,7 @@
                             <span class="about-us__top">100-120</span>
                             <span class="about-us__bottom">Авто и контейнеров
                                 принимаем каждый месяц
-                                в штате</span>
+                            </span>
                         </li>
                         <li class="about-us__cell">
                             <span class="about-us__top">>1500т груза</span>
@@ -520,7 +521,7 @@
         </section>
         <section class="contacts" id='contacts'>
             <div class="container">
-                <div class="contacts__inner" data-aos="zoom-in-up">
+                <div class="contacts__inner">
                     <h2 class="contacts__title title">Наши контакты</h2>
                     <div class="contacts__wrapper">
                         <div class="contacts__left">
@@ -535,7 +536,7 @@
                             <li class="contacts__item">Отдел продаж: пн-пт 10:00 – 18:00</li>
                             <li class="contacts__item">mail@mail.ru</li>
                             <li class="contacts__item">
-                                <a target="_blank" href='https://www.instagram.com/?hl=ru' class="contacts__link">ссылка на инстаграм карго</a>
+                                <a target="_blank" href='https://www.instagram.com/logistics_belcargo/?hl=ru' class="contacts__link">ссылка на инстаграм карго</a>
                             </li>
                         </ul>
                     </div>
