--- a/src/index.html
+++ b/src/index.html
@@ -536,7 +536,7 @@
                             <li class="contacts__item">Отдел продаж: пн-пт 10:00 – 18:00</li>
                             <li class="contacts__item">mail@mail.ru</li>
                             <li class="contacts__item">
-                                <a target="_blank" href='https://www.instagram.com/logistics_belcargo/?hl=ru' class="contacts__link">ссылка на инстаграм карго</a>
+                                <a target="_blank" href='https://www.instagram.com/logistics_belcargo/?hl=ru' class="contacts__link">instagram</a>
                             </li>
                         </ul>
                     </div>
