--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cargo-buyer</title>
+    <title>cargo-buyer</title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                         <img src="./assets/img/jpg/insta_red_logo.jpg" alt="" class="header__center-img">
                     </div>
                     <div class="header__right">
-                        <a href="tel:+7 123 456 78" class="header__phone">+4 547 8 18 60</a>
+                        <a href="tel:+7 123 456 78" class="header__phone">+7 454 78 18 60</a>
                         <div class="header__adress">Адрес и время работы
                             <div class="header__adress-inform">
                                 <p class="header__adress-title"><span>Склад:</span> г.Москва, поселение Мосрентген,
@@ -214,7 +214,7 @@
                                 <div class="calc__col">
                                     <label class="calc__label form__label">Введите вес, кг:
                                     </label>
-                                    <input type="number" placeholder='25' class="calc__input form__input" name="weight">
+                                    <input type="number" placeholder='0' class="calc__input form__input" name="weight">
                                 </div>
                                 <div class="calc__col">
                                     <label class="calc__label form__label">3.Выберите страну отправки груза:</label>
@@ -304,13 +304,7 @@
                                 <li class="thanks__cell">Таможенное оформление</li>
                                 <li class="thanks__cell">Финансовая гарантия</li>
                             </ul>
-                            <p class="thanks__bottom">*Доставка от склада отправителя 
-                                до Вильнюса рассчитывается 
-                                индивидуально в зависимости 
-                                от параметров груза.Наши менеждеры 
-                                свяжутся с вами в рабочее время 
-                                (с 10:00 до 18:00 по МСК) 
-                                для консультации.</p>
+                            <p class="thanks__bottom"></p>
                         </div>
                     </div>
                 </div>
@@ -526,7 +520,7 @@
                     <div class="contacts__wrapper">
                         <div class="contacts__left">
                             <p class="contacts__text"> <span>Склад: </span>пересечение Киевского шоссе и МКАД (43-ий
-                                км). Посёлок Мосрентген, логистический центр "Славянский мир", 26 корпус, 9 склад.</p>
+                                км). Посёлок Мосрентген, логистический центр "Славянский мир"</p>
                             <p class="contacts__text"><span>Точка выгрузки: </span>55.625221, 37.459090</p>
                             <p class="contacts__text"><span>Точка въезда со стороны Киевского шоссе: </span> 55.620358,
                                 37.454470</p>
@@ -534,7 +528,9 @@
                         <ul class="contacts__right">
                             <li class="contacts__item">Доставка и выдача: ежедневно </li>
                             <li class="contacts__item">Отдел продаж: пн-пт 10:00 – 18:00</li>
-                            <li class="contacts__item">mail@mail.ru</li>
+                            <li class="contacts__item">
+                                <a href='mailto:info@cargo-buyer.ru' class="contacts__link">info@cargo-buyer.ru</a>
+                            </li>
                             <li class="contacts__item">
                                 <a target="_blank" href='https://www.instagram.com/logistics_belcargo/?hl=ru' class="contacts__link">instagram</a>
                             </li>
@@ -557,7 +553,7 @@
                     </div>
                 </div>
                 <div class="header__right">
-                    <a href="tel:+7 123 456 78" class="header__phone">+4 547 8 18 60</a>
+                    <a href="tel:+7 123 456 78" class="header__phone">+7 454 78 18 60</a>
                 </div>
             </div>
 
@@ -565,9 +561,42 @@
 
     </footer>
     <a href="./assets/price/Cargo_bayer_price.pdf" target="_blank" id="open-pdf"></a>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161993581-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
-
+  gtag('config', 'UA-161993581-1', {
+  'linker': {
+    'domains': ['cargo-buyer.com']
+  }
+});
+/* Accurate bounce rate by time */
+            setTimeout(function(){
+                gtag('event', location.pathname, {
+                    'event_category': 'Новый посетитель'
+                });
+            }, 15000);
+</script> -->
+<!-- Yandex.Metrika counter -->
+<!-- <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+    ym(61473721, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true,
+         webvisor:true
+    });
+ </script>
+ <noscript><div><img src="https://mc.yandex.ru/watch/61473721" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+ <!-- /Yandex.Metrika counter -->
+ <!-- <script src='https://zenconnector.ru/js/connector.js' data-zentoken='0YFhcmdvLWJ1eWVyLmNvbToxOQ=='></script> -->
 </body>
+
 
 </html>
