--- a/src/index.html
+++ b/src/index.html
@@ -529,10 +529,10 @@
                             <li class="contacts__item">Доставка и выдача: ежедневно </li>
                             <li class="contacts__item">Отдел продаж: пн-пт 10:00 – 18:00</li>
                             <li class="contacts__item">
-                                <a href='mailto:info@cargo-buyer.ru' class="contacts__link">info@cargo-buyer.ru</a>
+                                <a href='mailto:info@cargo-buyer.ru' class="contacts__link contacts__mail">info@cargo-buyer.ru</a>
                             </li>
                             <li class="contacts__item">
-                                <a target="_blank" href='https://www.instagram.com/logistics_belcargo/?hl=ru' class="contacts__link">instagram</a>
+                                <a target="_blank" href='https://www.instagram.com/logistics_belcargo/?hl=ru' class="contacts__link contacts__instagram">instagram</a>
                             </li>
                         </ul>
                     </div>
@@ -561,8 +561,8 @@
 
     </footer>
     <a href="./assets/price/Cargo_bayer_price.pdf" target="_blank" id="open-pdf"></a>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161993581-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161993581-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -570,7 +570,7 @@
 
   gtag('config', 'UA-161993581-1', {
   'linker': {
-    'domains': ['cargo-buyer.com']
+    'domains': ['cargo-buyer.ru']
   }
 });
 /* Accurate bounce rate by time */
@@ -579,9 +579,9 @@
                     'event_category': 'Новый посетитель'
                 });
             }, 15000);
-</script> -->
+</script>
 <!-- Yandex.Metrika counter -->
-<!-- <script type="text/javascript" >
+<script type="text/javascript" >
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
     m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -593,9 +593,9 @@
          webvisor:true
     });
  </script>
- <noscript><div><img src="https://mc.yandex.ru/watch/61473721" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+ <noscript><div><img src="https://mc.yandex.ru/watch/61473721" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
  <!-- /Yandex.Metrika counter -->
- <!-- <script src='https://zenconnector.ru/js/connector.js' data-zentoken='0YFhcmdvLWJ1eWVyLmNvbToxOQ=='></script> -->
+ <script src='https://zenconnector.ru/js/connector.js' data-zentoken='0YFhcmdvLWJ1eWVyLmNvbToxOQ=='></script>
 </body>
 
 
