--- a/src/index.html
+++ b/src/index.html
@@ -219,12 +219,12 @@
                                 <div class="calc__col">
                                     <label class="calc__label form__label">3.Выберите страну отправки груза:</label>
                                     <select class="calc__select" id="js-cargo" name="countries">
-                                        <option value="Бельгия" selected="selected">Бельгия</option>
+                                        <option value="Бельгия" >Бельгия</option>
                                         <option value="Великобритания">Великобритания</option>
                                         <option value="Германия">Германия</option>
                                         <option value="Греция">Греция</option>
                                         <option value="Испания">Испания</option>
-                                        <option value="Италия">Италия</option>
+                                        <option value="Италия" selected="selected">Италия</option>
                                         <option value="Китай">Китай</option>
                                         <option value="Польша">Польша</option>
                                         <option value="США">США</option>
