--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                         <img src="./assets/img/jpg/insta_red_logo.jpg" alt="" class="header__center-img">
                     </div>
                     <div class="header__right">
-                        <a href="tel:+7 123 456 78" class="header__phone">+7 454 78 18 60</a>
+                        <a href="tel:+74954781860" class="header__phone">+7 495 478 18 60</a>
                         <div class="header__adress">Адрес и время работы
                             <div class="header__adress-inform">
                                 <p class="header__adress-title"><span>Склад:</span> г.Москва, поселение Мосрентген,
@@ -553,14 +553,14 @@
                     </div>
                 </div>
                 <div class="header__right">
-                    <a href="tel:+7 123 456 78" class="header__phone">+7 454 78 18 60</a>
+                    <a href="tel:+74954781860" class="header__phone">+7 495 478 18 60</a>
                 </div>
             </div>
 
         </div>
 
     </footer>
-    <a href="./assets/price/Cargo_bayer_price.pdf" target="_blank" id="open-pdf"></a>
+    <a href="./assets/price/Cargo_bayer_price.pdf" id="open-pdf"></a>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161993581-1"></script>
 <script>
@@ -570,7 +570,7 @@
 
   gtag('config', 'UA-161993581-1', {
   'linker': {
-    'domains': ['cargo-buyer.ru']
+    'domains': ['cargo-buyer.com']
   }
 });
 /* Accurate bounce rate by time */
