--- a/src/index.html
+++ b/src/index.html
@@ -560,7 +560,7 @@
         </div>
 
     </footer>
-    <a href="./assets/price/Cargo_bayer_price.pdf" target="_blank" id="open-pdf"></a>
+    <a href="./assets/price/Cargo_bayer_price.pdf" id="open-pdf"></a>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161993581-1"></script>
 <script>
@@ -570,7 +570,7 @@
 
   gtag('config', 'UA-161993581-1', {
   'linker': {
-    'domains': ['cargo-buyer.ru']
+    'domains': ['cargo-buyer.com']
   }
 });
 /* Accurate bounce rate by time */
